# manus-builder

./: .env.example  .env.example.coolify  COOLIFY_SETUP.md  Dockerfile.node  README.md  docker-compose.coolify.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  todo.md
.sisyphus/: boulder.json
.sisyphus/evidence/: TEST_REPORT.md
.sisyphus/notepads/mvp-improvements/: learnings.md
.sisyphus/notepads/open-manus-builder-mvp/: decisions.md  learnings.md  problems.md
.sisyphus/plans/: mvp-improvements.md  open-manus-builder-mvp.md
client/: index.html
client/src/: App.tsx  const.ts  index.css
client/src/hooks/: useLLMSettings.ts
client/src/pages/: Builder.tsx  Home.tsx
drizzle/: 0001_great_blockbuster.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
playwright-report/: index.html
server/: db.ts  projects.test.ts  routers.ts
server/_core/: context.ts  env.ts  index.ts  llm.ts  sdk.ts  vite.ts
server/llm/: index.ts  registry.test.ts  registry.ts  types.ts
server/llm/providers/: anthropic.ts  base.ts  index.ts  (+3 more)
server/orchestrator/: client.test.ts  client.ts  types.ts
services/orchestrator/: Dockerfile  main.py  pyproject.toml  setup.py
services/orchestrator/agents/: __init__.py  coder.py  planner.py  reviewer.py
services/orchestrator/graph/: __init__.py  workflow.py
services/orchestrator/orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/orchestrator/tests/: test_health.py  test_integration.py  test_workflow.py
tests/e2e/: builder.spec.ts
